--- a/style.css
+++ b/style.css
@@ -1,76 +1,55 @@
-@import "https://unpkg.com/normalize.css";
 
-*,
-*:after,
-*:before {
+/* Reset CSS */
+* {
+	margin: 0;
+	padding: 0;
 	box-sizing: border-box;
 }
-
-:root {
-	--gap: 1rem;
-	--card-width: clamp(280px, 20vw, 100vw);
-	--card-aspect-ratio: 5 / 7;
-	--card-height: calc(var(--card-width) * (7 / 5));
-}
-
+html,
 body {
-	display: grid;
-	place-items: center;
-	font-family:  'Google Sans', sans-serif, system-ui;
-	overflow-x: hidden;
-	justify-content: center;
-	min-height: 100vh;
+	background: linear-gradient(45deg, #ffffff, #ffffff);
+	padding: 15px;
+}
+img {
+	max-width: 100%;
+	height: auto;
+	vertical-align: middle;
+	display: inline-block;
+	transition: 0.5s ease-in-out;
 }
 
-.grid {
-	display: grid;
+img:hover{	
+	transition: 0.5s;
+	transform: scale(1.05);
+  }
+
+/* Main CSS */
+.grid-wrapper > div {
+	display: flex;
 	justify-content: center;
-	grid-template-columns: repeat(5, var(--card-width));
-	gap: 1rem;
-  /* overflow: hidden shouldn't break this? */
-  overflow: hidden;
+	align-items: center;
+}
+.grid-wrapper > div > img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	border-radius: 5px;
 }
 
 .grid-wrapper {
-	/* overflow: hidden; */
-}
-
-.column {
 	display: grid;
-	gap: 1rem;
-  align-content: start;
+	grid-gap: 10px;
+	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+	grid-auto-rows: 200px;
+	grid-auto-flow: dense;
 }
-
-.column:not(:nth-of-type(3)) {
-	animation: scale 1s linear both;
-	animation-timeline: scroll(root);
+.grid-wrapper .wide {
+	grid-column: span 2;
 }
-
-/* The distance is the number of cards minus 100vh */
-.column:is(:nth-of-type(2), :nth-of-type(4)) {
-	--origin: calc(var(--gap) * -1);
-	--destination: calc(var(--card-height) * 1.5 + var(--gap));
+.grid-wrapper .tall {
+	grid-row: span 2;
 }
-.column:is(:nth-of-type(1), :nth-of-type(5)) {
-	--origin: calc(var(--gap) * -2);
-	--destination: calc(var(--card-height) * 3.4 + var(--gap));
-}
-
-@keyframes scale {
-	0% {
-		transform: translateY(var(--origin, 0%));
-	}
-	100% {
-		transform: translateY(var(--destination, -50%));
-	}
-}
-
-img {
-	max-width: 100%;
-	border: 0;
-	padding: 0;
-	max-height: 100%;
-	width: 100%;
-	aspect-ratio: 5 / 7;
-	background: hsl(0 0% 80%);
+.grid-wrapper .big {
+	grid-column: span 2;
+	grid-row: span 2;
 }
